<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tabelas"
    android:orientation="vertical"
    android:background="@color/cor_fundo_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/cor_banner_superior"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_logo_id"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/img_logo"
            app:tint="@color/logo" />

        <LinearLayout
            android:id="@+id/display_nome"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nome_do_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_do_app"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/descricao_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao_nome"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ano_copa"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/vermelho_destaque">

            </TextView>

        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-500dp"
            android:src="@drawable/fundo_mapa_mundi"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/forma_arredondada"
                    android:backgroundTint="@color/vermelho_icones">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tabelas"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        android:textColor="@color/cor_textos_titulos"
                        android:layout_margin="10dp"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTabela"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </FrameLayout>




</LinearLayout>